[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-analytics"
version = "1.0.0"
description = "PySpark Analytics Project"
authors = [{ name="Anand", email="anandhott07@gmail.com" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
